--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -1,5 +1,6 @@
 .app {
     font-family: 'Open Sans';
+    padding-top: 45px;
     margin: 0 auto;
     max-width: 960px;
     min-height: 100vh;
@@ -7,7 +8,7 @@
 }
 
 .logo {   
-    padding: 45px 0  35px 0;
+    padding: 0 0  35px 0;
     margin: 0 auto;
     width:60px;
 }
